--- a/bundle/_config.yml
+++ b/bundle/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title - What if the title is not so awesome though?
-email: your-email@example.com
+title: Theodore Bouloumis' website
+email: teoloumis@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -28,7 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
-
+linkedin_username: LinkedIn
 # Build settings
 theme: minima
 plugins:
