--- a/bundle/_config.yml
+++ b/bundle/_config.yml
@@ -28,7 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
-linkedin_username: theodore-bouloumis/
+linkedin_username:
 # Build settings
 theme: minima
 plugins:
